// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > matches snapshot for default variant 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-[var(--color-border)] bg-[var(--color-bg-primary)] text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
      placeholder="Default input"
    />
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot for disabled state 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-[var(--color-border)] bg-[var(--color-bg-primary)] text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
      disabled=""
      placeholder="Disabled input"
    />
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot for filled variant 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-transparent bg-[var(--color-bg-tertiary)] text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
      placeholder="Filled input"
    />
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot for outline variant 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-2 border-[var(--color-border)] bg-transparent text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
      placeholder="Outline input"
    />
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot with error state 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-[var(--color-error)] bg-[var(--color-error-bg)] focus:border-[var(--color-error)] focus:ring-[var(--color-error)] px-4 py-2 text-base"
    />
    <p
      class="mt-1 text-sm text-[var(--color-error)]"
    >
      This field is required
    </p>
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot with helper text 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-[var(--color-border)] bg-[var(--color-bg-primary)] text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
    />
    <p
      class="mt-1 text-sm text-[var(--color-text-tertiary)]"
    >
      This is a helper message
    </p>
  </div>
</DocumentFragment>
`;

exports[`Input > matches snapshot with label 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="block text-sm font-medium text-[var(--color-text-secondary)] mb-1"
      for="email"
    >
      Email
    </label>
    <input
      class="w-full rounded-md border transition-colors placeholder:text-[var(--color-text-tertiary)] focus:outline-none focus:ring-2 focus:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed border-[var(--color-border)] bg-[var(--color-bg-primary)] text-[var(--color-text-primary)] focus:border-[var(--color-primary)] focus:ring-[var(--color-primary)] px-4 py-2 text-base"
      id="email"
      placeholder="Enter email"
    />
  </div>
</DocumentFragment>
`;
